Reorganized file stucture

--- a/project/signup.html
+++ b/project/signup.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/app.css">
+        <link rel="stylesheet" href="css/app-signup.css">
         <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
         <title>Skateable | Home</title>
     </head>
@@ -12,7 +12,7 @@
         
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="js/lib/knockout-3.4.2.js"></script>
-        <script src="js/app.js"></script>
+        <script src="js/app-signup.js"></script>
         <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8D_Pui7ocLcOS5zIiEMhG9iiHIJuI_-E&v=3&callback=initMap" onerror="errorHandling()">
         </script> 
