Added Skateable logo

--- a/project/index.html
+++ b/project/index.html
@@ -13,6 +13,7 @@
                 <div id="menu-button">
                     <img id="menu" src="img/menu.png" alt="menu" data-bind="click: menuUtility">
                 </div>
+                <div id="logo"><img src="img/Logo.png" alt="Skateable"></div>
             </header>
             <div id="map"></div>
             <div></div>
