Added sidebar content

--- a/project/index.html
+++ b/project/index.html
@@ -3,13 +3,17 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/app-home.css">
-        <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
         <title>Skateable | Home</title>
     </head>
     <body>
         <div id="container">
             <div id="side-bar">
                 <a href="javascript:void(0)" class="clsbtn" data-bind="click: closePanel">&times;</a>
+                <a href="#" class="list">Profile</a>
+                <a href="#" class="list">Groups</a>
+                <a href="#" class="list">Parks</a>
+                <a href="#" class="list">Settings</a>
             </div>
             
             <header id="top-bar">
