Linked pages together and touched up css

--- a/project/login.html
+++ b/project/login.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/app-login.css">
-        <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
         <title>Skateable | Login</title>
     </head>
     <body>
@@ -19,8 +19,8 @@
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
 <div class="container2">
-    <button type="button" class= "loginbtn">Login</button>
-    <button type="button" class="signupbtn">Sign Up</button>
+    <button type="button" class= "loginbtn" onclick="location.href='index.html'">Login</button>
+    <button type="button" class="signupbtn" onclick="location.href='signup.html'">Sign Up</button>
     
     </div>
   </div>
