--- a/project/signup.html
+++ b/project/signup.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/app-signup.css">
-        <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
         <title>Skateable | Signup</title>
     </head>
     <body>      
@@ -59,8 +59,11 @@
               <br>
             </div>
 
-            <button type="button" class="signupbtn"> Submit</button>         
+            <button type="button" class="signupbtn" onclick="location.href='index.html'"> Submit</button>         
             
+        </div>
+        <div class="footer">
+            <p>Get Skateable @ 2018</p>
         </div>
                  
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
