--- a/project/signup.html
+++ b/project/signup.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/app-signup.css">
         <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
+        <link rel="icon" href="img/icon.png">
         <title>Skateable | Signup</title>
     </head>
     <body>      
