--- a/project/index.html
+++ b/project/index.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/app-home.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="icon" href="img/icon.png">
         <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
         <title>Skateable | Home</title>
     </head>
