Added main page link to logo

--- a/project/parks.html
+++ b/project/parks.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/app-home.css">
+        <link rel="stylesheet" href="css/app-parks.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="icon" href="img/icon.png">
         <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
@@ -22,7 +22,7 @@
                 <button id="menu-button">
                     <img id="menu" src="img/menu.png" alt="menu" data-bind="click: openPanel">
                 </button>
-                <div id="logo"><img src="img/Logo.png" alt="Skateable"></div>
+                <div id="logo"><a href="index.html"><img src="img/Logo.png" alt="Skateable"></a></div>
             </header>
             
 
