--- a/project/index.html
+++ b/project/index.html
@@ -12,9 +12,9 @@
         <div id="container">
             <div id="side-bar">
                 <a href="javascript:void(0)" class="clsbtn" data-bind="click: closePanel">&times;</a>
-                <a href="#" class="list">Profile</a>
+                <a href="profile.html" class="list">Profile</a>
                 <a href="#" class="list">Groups</a>
-                <a href="#" class="list">Parks</a>
+                <a href="parks.html" class="list">Parks</a>
                 <a href="#" class="list">Settings</a>
             </div>
             
@@ -43,7 +43,7 @@
                 <button id="menu-button">
                     <img id="menu" src="img/menu.png" alt="menu" data-bind="click: openPanel">
                 </button>
-                <div id="logo"><img src="img/Logo.png" alt="Skateable"></div>
+                <div id="logo"><a href="index.html"><img src="img/Logo.png" alt="Skateable"></a></div>
                 <button id="pinButton" data-bind="click: openModal">Create Pin</button>
             </header>
             <div id="map"></div>
