--- a/skateable/client/index.html
+++ b/skateable/client/index.html
@@ -14,7 +14,7 @@
                 <a href="javascript:void(0)" class="clsbtn" data-bind="click: closePanel">&times;</a>
                 <a href="#" class="list">Profile</a>
                 <a href="#" class="list">Groups</a>
-                <a href="#" class="list">Parks</a>
+                <a href="#" class="list">My Parks</a>
                 <a href="#" class="list">Settings</a>
             </div>
             
@@ -43,7 +43,7 @@
                 <button id="menu-button">
                     <img id="menu" src="img/menu.png" alt="menu" data-bind="click: openPanel">
                 </button>
-                <div id="logo"><img src="img/Logo.png" alt="Skateable"></div>
+                <div id="logo"><a href="index.html"><img src="img/Logo.png" alt="Skateable"></a></div>
                 <button id="pinButton" data-bind="click: openModal">Create Pin</button>
             </header>
             <div id="map"></div>
