--- a/skateable/client/parks.html
+++ b/skateable/client/parks.html
@@ -25,7 +25,16 @@
                 <div id="logo"><a href="index.html"><img src="img/Logo.png" alt="Skateable"></a></div>
             </header>
             <div id="mainContent">
-            
+                <div id="parkList">
+                    <h1 id="parksTitle">My Parks</h1>
+                    <ul data-bind="foreach: visible">
+                        <li class="list-li">
+                            <h4><strong>Park Name</strong></h3>
+                            <h5>Street Address</h4>
+                            <h6>City State Zip</h5>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div id="map"></div>
 
