Added links to other pages to Home

--- a/skateable/client/index.html
+++ b/skateable/client/index.html
@@ -12,9 +12,9 @@
         <div id="container">
             <div id="side-bar">
                 <a href="javascript:void(0)" class="clsbtn" data-bind="click: closePanel">&times;</a>
-                <a href="#" class="list">Profile</a>
+                <a href="profile.html" class="list">Profile</a>
                 <a href="#" class="list">Groups</a>
-                <a href="#" class="list">My Parks</a>
+                <a href="parks.html" class="list">My Parks</a>
                 <a href="#" class="list">Settings</a>
             </div>
             
