--- a/skateable/client/parks.html
+++ b/skateable/client/parks.html
@@ -16,6 +16,7 @@
                 <a href="#" class="list">Groups</a>
                 <a href="parks.html" class="list">Parks</a>
                 <a href="#" class="list">Settings</a>
+                <a href="login.html">Login</a>
             </div>
             
             <header id="top-bar">
