--- a/skateable/client/index.html
+++ b/skateable/client/index.html
@@ -26,10 +26,14 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Create a Pin</h4>
+                            <h3 class="modal-title">Create a Pin</h3>
                         </div>
                         <div class="modal-body">
-                            <p></p>
+                            <form>
+                                <input type="radio" id="current-location">User current location<br>-Or-<br>
+                                <span>Search the address of the park</span><br>
+                                <input id="places-search" type="text" placeholder="Ex: 3307 3rd Ave W . . .">
+                            </form>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-success" id="yesButton" data-dismiss="modal">Add Pin</button>
@@ -58,7 +62,7 @@
 
         <script src="js/app-home.js"></script>
         <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8D_Pui7ocLcOS5zIiEMhG9iiHIJuI_-E&v=3&callback=initMap" onerror="errorHandling()">
-        </script>   
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8D_Pui7ocLcOS5zIiEMhG9iiHIJuI_-E&v=3&libraries=places&callback=initMap" onerror="errorHandling()">
+        </script>
     </body>
 </html>
