--- a/skateable/client/index.html
+++ b/skateable/client/index.html
@@ -13,7 +13,7 @@
             <div id="side-bar">
                 <a href="javascript:void(0)" class="clsbtn" data-bind="click: closePanel">&times;</a>
                 <a href="profile.html" class="list">Profile</a>
-                <a href="#" class="list">Groups</a>
+                <a href="groups.html" class="list">Groups</a>
                 <a href="parks.html" class="list">My Parks</a>
                 <a href="#" class="list">Settings</a>
                 <a href="login.html" class="login">Login</a>
