Baseline framework for groups page

--- a/skateable/client/groups.html
+++ b/skateable/client/groups.html
@@ -13,7 +13,7 @@
             <div id="side-bar">
                 <a href="javascript:void(0)" class="clsbtn" data-bind="click: closePanel">&times;</a>
                 <a href="profile.html" class="list">Profile</a>
-                <a href="#" class="list">Groups</a>
+                <a href="groups.html" class="list">Groups</a>
                 <a href="parks.html" class="list">My Parks</a>
                 <a href="#" class="list">Settings</a>
                 <a href="login.html" class="login">Login</a>
@@ -26,7 +26,16 @@
                 <div id="logo"><a href="index.html"><img src="img/Logo.png" alt="Skateable"></a></div>
             </header>
             <div id="main-content">
-            
+                <div id="group-list">
+                    <h1>Groups</h1>
+                    <ul>
+                        <li>
+                            <h4><strong>Park Name</strong></h4>
+                            <h5></h5>
+                            <h6>City State Zip</h6>
+                        </li>
+                    </ul>
+                </div>
             </div>
 
         </div>
