--- a/skateable/client/groups.html
+++ b/skateable/client/groups.html
@@ -30,9 +30,9 @@
                     <h1>Groups</h1>
                     <ul>
                         <li>
-                            <h4><strong>Park Name</strong></h4>
+                            <h4><strong>Group Name</strong></h4>
                             <h5></h5>
-                            <h6>City State Zip</h6>
+                            <h6>Location</h6>
                         </li>
                     </ul>
                 </div>
