--- a/skateable/client/groups.html
+++ b/skateable/client/groups.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="icon" href="img/icon.png">
         <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
-        <title>Skateable | Home</title>
+        <title>Skateable | Groups</title>
     </head>
     <body>
         <div id="container">
