--- a/skateable/client/index.html
+++ b/skateable/client/index.html
@@ -16,7 +16,7 @@
                 <a href="groups.html" class="list">Groups</a>
                 <a href="parks.html" class="list">My Parks</a>
                 <a href="#" class="list">Settings</a>
-                <a href="login.html" class="login">Login</a>
+                <a href="login.html" class="login">Login/Logout</a>
             </div>
             
             <header id="top-bar">
