--- a/skateable/client/index.html
+++ b/skateable/client/index.html
@@ -23,7 +23,7 @@
                 <button id="menu-button">
                     <img id="menu" src="img/menu.png" alt="menu" data-bind="click: openPanel">
                 </button>
-                <div id="logo"><a href="index.html"><img src="img/Logo.png" alt="Skateable"></a></div>
+                <div id="logo"><a href="index.html"><img src="img/icon.png" alt="Skateable"></a></div>
                 <button id="pinButton" data-bind="click: openModal">Create Pin</button>
             </header>
             
