Changed SignUp page details

--- a/skateable/client/signup.html
+++ b/skateable/client/signup.html
@@ -59,7 +59,7 @@
               <br>
             </div>
 
-            <button type="button" class="signupbtn" onclick="SignUp();"> Submit</button>         
+            <button type="button" class="signupbtn" onclick="signUp();"> Submit</button>         
             
         </div>
         <div class="footer">
