added a button to profile page

--- a/skateable/client/profile.html
+++ b/skateable/client/profile.html
@@ -50,9 +50,11 @@
 </textarea>
         </div>        
           </div>
-        </div>
-         
+        </div>    
 </div>
+    <div class="settingsButton">
+    <button type="button" onclick="">Edit Profile</button>
+    </div>
     </div>
    
     <div id="map"></div>
