Fixed sidebar to be uniform across site

--- a/skateable/client/groups.html
+++ b/skateable/client/groups.html
@@ -15,8 +15,7 @@
                 <a href="profile.html" class="list">Profile</a>
                 <a href="groups.html" class="list">Groups</a>
                 <a href="parks.html" class="list">My Parks</a>
-                <a href="#" class="list">Settings</a>
-                <a href="login.html" class="Login/Logout">Login</a>
+                <a href="login.html" class="login">Login/Logout</a>
             </div>
             
             <header id="top-bar">
