--- a/skateable/client/parks.html
+++ b/skateable/client/parks.html
@@ -15,8 +15,7 @@
                 <a href="profile.html" class="list">Profile</a>
                 <a href="groups.html" class="list">Groups</a>
                 <a href="parks.html" class="list">Parks</a>
-                <a href="#" class="list">Settings</a>
-                <a href="login.html">Login/Logout</a>
+                <a href="login.html" class="login">Login/Logout</a>
             </div>
             
             <header id="top-bar">
