--- a/skateable/client/login.html
+++ b/skateable/client/login.html
@@ -18,8 +18,8 @@
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
 <div class="container2">
-    <button type="button" class= "loginbtn" onclick="Login();">Login</button>
-    <button type="button" class="signupbtn" onclick="location.href='signup.html'">Sign Up</button>
+    <button type="button" id= "loginbtn" onclick="Login();">Login</button>
+    <button type="button" id="signupbtn" onclick="location.href='signup.html'">Sign Up</button>
     
     </div>
   </div>
