--- a/skateable/client/profile.html
+++ b/skateable/client/profile.html
@@ -57,8 +57,8 @@
 </div>
     
     <div class="settingsButton">
-    <button type="button" data-bind="click: updateUser">Edit Profile</button>
-    <button id="pwbutton">Change Password</button>
+    <button type="button" id = "editProfBtn" data-bind="click: updateUser">Edit Profile</button>
+    <button class="pwbutton">Change Password</button>
         <div class="panel">
         <label>
               Enter Old Password<span class="req">*</span>
