Added groups layout

--- a/skateable/client/groups.html
+++ b/skateable/client/groups.html
@@ -30,10 +30,18 @@
                     <ul>
                         <li>
                             <h4><strong>Group Name</strong></h4>
-                            <h5></h5>
-                            <h6>Location</h6>
+                            <h5>Location</h5>
                         </li>
                     </ul>
+                </div>
+                <div id="messageContainer">
+                    <h1>Chat Messages</h1>
+                    <div id="chatBox"></div>
+                    <form class="cursor">
+                        <input type="text" id="message" placeholder="Your message here...">
+                        <i></i>
+                        <input type="submit" id="msgButton">
+                    </form>
                 </div>
             </div>
 
