display favorite markers

--- a/skateable/client/profile.html
+++ b/skateable/client/profile.html
@@ -43,7 +43,7 @@
                 <div contenteditable = "true" id ="mail"></div>
 			  <label>Number of Groups: </label>
                 <div id ="groups"></div>
-			  <label>Number of Spots: </label>
+			  <label>Number of Favorite Spots: </label>
                 <div id ="spots"></div>
             </ul>
               
