Changes to make curUser global and small changes to fav parks page

--- a/skateable/client/parks.html
+++ b/skateable/client/parks.html
@@ -43,9 +43,11 @@
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="js/lib/knockout-3.4.2.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+        <script src="js/app-parks.js"></script>
         <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8D_Pui7ocLcOS5zIiEMhG9iiHIJuI_-E&v=3&callback=initMap" onerror="errorHandling()">
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyACTh2rza-L1ZN7tHtNzOpjGNHor-y7Ld0&v=3&libraries=places,geometry&callback=initMap" onerror="errorHandling()">
         </script>
-        <script src="js/app-parks.js"></script> 
+
     </body>
 </html>
