--- a/skateable/client/index.html
+++ b/skateable/client/index.html
@@ -33,12 +33,12 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h3 class="modal-title">Park Name</h3>
-                            <input type="text" id="pinName">
+                            <h3 class="modal-title">Create Pin</h3>
                         </div>
                         <div class="modal-body">
-                            <button type="button" id="current-location" data-bind="click: getLocation">Use my Location</button><br><h2>Or</h2>
-                            <h4>Search the address of the park</h4>
+                            <h4>Pin Name</h4>
+                            <input type="text" id="pinName"><br>
+                            <h4>Search the address of the park <img src="img/myLocationIcon.png" id="current-location" data-bind="click: getLocation"></h4>
                             <input id="places-search" type="text" placeholder="Ex: 3307 3rd Ave W . . .">
                         </div>
                         <div class="modal-footer">
