--- a/skateable/client/index.html
+++ b/skateable/client/index.html
@@ -12,6 +12,7 @@
         <div id="container">
             <div id="side-bar">
                 <a href="javascript:void(0)" class="clsbtn" data-bind="click: closePanel">&times;</a>
+                <a href="index.html" class="login">Home</a>
                 <a href="profile.html" class="list">Profile</a>
                 <a href="groups.html" class="list">Groups</a>
                 <a href="parks.html" class="list">My Parks</a>
