--- a/skateable/client/parks.html
+++ b/skateable/client/parks.html
@@ -26,13 +26,15 @@
                 <div id="logo"><a href="index.html"><img src="img/icon.png" alt="Skateable"></a></div>
             </header>
             <div id="mainContent">
+			<h1 id="parksTitle">My Parks</h1>
                 <div id="parkList">
-                    <h1 id="parksTitle">My Parks</h1>
-                    <ul data-bind="foreach: visible">
+ 
+                    <ul id= "parentList" data-bind="foreach: uiList">
                         <li class="list-li">
-                            <h4><strong>Park Name</strong></h4>
-                            <h5>Street Address</h5>
-                            <h6>City State Zip</h6>
+                            <h4><strong>Park Name: </strong><span data-bind= "text: name"></span></h4> 
+                            <h5><strong>Street Address: </strong><span data-bind= "text: streetAddress"></span></h5>
+                            <h5><strong>rating: </strong><span data-bind= "text: rating"></span></h6>
+							       <button type="button" id="goButton" data-bind="click:  $parent.openSpot"> Go to Spot</button> 
                         </li>
                     </ul>
                 </div>
