--- a/skateable/client/index.html
+++ b/skateable/client/index.html
@@ -43,8 +43,8 @@
                             <input id="places-search" type="text" placeholder="Ex: 3307 3rd Ave W . . .">
                             <h5>Add Comment </h5>
                             <textarea name="comment" form="usrform" id="commentInput" placeholder="Enter comment here. . ."></textarea>
-                            <button class="yayBtn" onclick="yayRating();">Yay </button>
-                            <button class="nayBtn" onclick="nayRating();">Nay </button>
+                            <button class="yayBtn" onclick="yayRating()">Yay </button>
+                            <button class="nayBtn" onclick="nayRating()">Nay </button>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-success" id="yesButton" data-bind="click: setPin"  >Add Pin</button>
