--- a/skateable/client/index.html
+++ b/skateable/client/index.html
@@ -54,6 +54,32 @@
 
                 </div>
             </div>
+			
+			<div class="modal fade" id="meetModal" role="dialog">
+                <div class="modal-dialog">
+
+                <!-- Group Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h6 class="modal-title">Mark a Meet-Up Here</h6>
+                        </div>
+                        <div class="modal-body2">
+                            <h7>Meet-Up Day: <br /></h7>
+                            <input type="date" id="meetupDay" placeholder="Ex: 07/12/2018">
+							<h8>Add a Description </h8>
+                            <textarea id="description" rows="4" cols="40" placeholder="Enter a description here. . ."></textarea>
+							<h9>Will you attend? </h9>
+                             <input type="radio" name="yes" value="yes" id="yesbttn"> Yes<br>
+  							 <input type="radio" name="no" value="no" id="nobttn"> No<br>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-success" id="makeButton" onclick="createMeetup()">Make Meetup</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div id="map"></div>
             
         </div>
