--- a/skateable/client/groups.html
+++ b/skateable/client/groups.html
@@ -13,7 +13,7 @@
             <div id="side-bar">
                 <a href="javascript:void(0)" class="clsbtn" data-bind="click: closePanel">&times;</a>
                 <a href="index.html" class="login">Home</a>
-                <a href="profile.html" class="list">Profile</a>
+                <a href="profile.html" class="list">Edit Profile</a>
                 <a href="groups.html" class="list">Groups</a>
                 <a href="parks.html" class="list">My Parks</a>
                 <a href="login.html" class="login">Login/Logout</a>
