View Current Meetups Button

--- a/skateable/client/index.html
+++ b/skateable/client/index.html
@@ -79,6 +79,25 @@
                     </div>
                 </div>
             </div>
+			<div class="modal fade" id="vmeetModal" role="dialog">
+                <div class="modal-dialog">
+
+                <!-- Group Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h6 class="modal-title">Current Meetups</h6>
+                        </div>
+                        <div class="modal-body2">
+                       <h10><strong>Park Name: </strong><span data-bind= "text: spotname"></span></h10> <br />
+                       <h11><strong>Street Address: </strong><span data-bind= "text: streetAddress"></span></h11>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div id="map"></div>
             
         </div>
