changes to meetup functions

--- a/skateable/client/index.html
+++ b/skateable/client/index.html
@@ -73,7 +73,7 @@
                             <textarea id="description" rows="4" cols="40" placeholder="Enter a description here. . ."></textarea>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-success" id="makeButton" onclick="createMeetup()">Make Meetup</button>
+                            <button type="button" class="btn btn-success" id="makeButton" onclick="createMeetup();">Make Meetup</button>
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                        <h11><strong>Street Address: </strong><span data-bind= "text: streetAddress"></span></h11>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-secondaryGet" data-dismiss="modal">Cancel</button>
                         </div>
                     </div>
                 </div>
