--- a/skateable/client/index.html
+++ b/skateable/client/index.html
@@ -91,6 +91,14 @@
                         <div class="modal-body2">
                        <h10><strong>Park Name: </strong><span id="meetUpSpotName"></span></h10> <br>
                        <h11><strong>Street Address: </strong><span id="meetUpSpotAddress"></span></h11>
+					   <div>
+					   <ul id= "parentList" data-bind="foreach: meetupList">
+                        <li class="list-li">
+                            <h4><strong>Meetup Date: </strong><span data-bind= "text: dayOfMeetup"></span></h4> 
+                            <h5><strong>Description: </strong><span data-bind= "text: description"></span></h5>
+                        </li>
+                    </ul>
+					</div>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondaryGet" data-dismiss="modal">Cancel</button>
