updated comment to post to db

--- a/skateable/client/index.html
+++ b/skateable/client/index.html
@@ -120,7 +120,7 @@
                             <textarea id="commentText" rows="4" cols="40" placeholder="Enter your comment here. . ."></textarea>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-success" id="makeButton" data-bind="click: addComment">Add</button>
+                            <button type="button" class="btn btn-success" id="makeButton" onclick="UpdateComment();">Add</button>
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                         </div>
                     </div>
