--- a/skateable/client/profile.html
+++ b/skateable/client/profile.html
@@ -106,7 +106,7 @@
               <br>  <br>
             </div>
    <div class="modal-footer">
-        <button type="button" class="btn btn-success" id = "editProfBtn" data-bind="click: updateUser">Save Profile Edits</button>
+        <button type="button" class="btn btn-success" id = "editProfBtn" data-bind="click: updateUser">Save Bio Edits</button>
        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
         </div>
     </div>
