Made addComment outside of ViewModel

--- a/skateable/client/index.html
+++ b/skateable/client/index.html
@@ -110,7 +110,7 @@
             <div class="modal fade" id="commentModal" role="dialog">
                 <div class="modal-dialog">
 
-                <!-- Group Modal content-->
+                <!-- Comment Modal content-->
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -120,7 +120,7 @@
                             <textarea id="commentText" rows="4" cols="40" placeholder="Enter your comment here. . ."></textarea>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-success" id="makeButton" onclick="UpdateComment();">Add</button>
+                            <button type="button" class="btn btn-success" id="makeComment" onclick="addComment()">Add</button>
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                         </div>
                     </div>
