message board funcionality

--- a/skateable/client/groups.html
+++ b/skateable/client/groups.html
@@ -101,7 +101,7 @@
                     <form class="cursor">
                         <input type="text" id="message" placeholder="Your message here...">
                         <i></i>
-                        <input type="submit" id="msgButton">
+                        <input type="submit" id="msgButton" onclick="return postMessage()">
                     </form>
                 </div>
             </div>
