Transferred all functionality to Parks page

--- a/skateable/client/parks.html
+++ b/skateable/client/parks.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="icon" href="img/icon.png">
         <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Skateable | My Parks</title>
     </head>
     <body>
@@ -107,6 +108,8 @@
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                         </div>
                     </div>
+                </div>
+            </div>
             <div id="map"></div>
         </div>
         
