--- a/skateable/client/index.html
+++ b/skateable/client/index.html
@@ -93,7 +93,7 @@
                        <h10><strong>Park Name: </strong><span id="meetUpSpotName"></span></h10> <br>
                        <h11><strong>Street Address: </strong><span id="meetUpSpotAddress"></span></h11>
 					   <div>
-					   <ul id= "parentList" data-bind="foreach: meetupList">
+					   <ul id= "parentList" data-bind="foreach: uiList">
                         <li class="list-li">
                             <h4><strong>Meetup Date: </strong><span data-bind= "text: dayOfMeetup"></span></h4> 
                             <h5><strong>Description: </strong><span data-bind= "text: description"></span></h5>
