--- a/skateable/client/groups.html
+++ b/skateable/client/groups.html
@@ -85,8 +85,8 @@
 
                             <h6><strong>Members: </strong><span data-bind= "text: members"></span></h6> 
 							<div class="list-footer">
-                            <button  type="button" id="leave" data-bind = "click:  $parent.leaveGroup">Leave Group</button>
-                            <button  type="button" id="connect" data-bind = "click: $parent.connectChat">Connect to Chat</button>
+                            <button  type="button" class="leave" data-bind = "click:  $parent.leaveGroup">Leave Group</button>
+                            <button  type="button" class="connect" data-bind = "click: $parent.connectChat">Connect to Chat</button>
 							</div>
  
                             </li>
