updated message board

--- a/skateable/client/groups.html
+++ b/skateable/client/groups.html
@@ -85,13 +85,10 @@
 
                             <h6><strong>Members: </strong><span data-bind= "text: members"></span></h6> 
 							<div class="list-footer">
-<<<<<<< HEAD
-                            <button  type="button" id="leave" data-bind = "click:  $parent.leaveGroup">Leave Group</button>
+                            <button  type="button" class="leave" id="leave" data-bind = "click:  $parent.leaveGroup">Leave Group</button>
                             <button  type="button" id="connect" data-bind = "click: $parent.ConnectChat">Connect to Chat</button>
-=======
-                            <button  type="button" class="leave" data-bind = "click:  $parent.leaveGroup">Leave Group</button>
-                            <button  type="button" class="connect" data-bind = "click: $parent.connectChat">Connect to Chat</button>
->>>>>>> 3f427cd586a850d885fbf355ba3695101dc12e58
+                            <!-- <button  type="button" class="leave" data-bind = "click:  $parent.leaveGroup">Leave Group</button>
+                            <button  type="button" class="connect" data-bind = "click: $parent.connectChat">Connect to Chat</button> -->
 							</div>
  
                             </li>
